--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   meta: ^1.1.6
   http: ^0.12.0
   uuid: ^2.0.1
+  dio: ^3.0.3
+  dio_http_cache: ^0.2.11
 
 dev_dependencies:
   test: ^1.0.0
