--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,14 @@ environment:
   sdk: ">=2.0.0 <3.0.0"
 
 dependencies:
-  meta: ^1.1.6
-  http: ^0.12.0
-  uuid: ^2.0.1
-  dio: ^3.0.3
-  dio_http_cache: ^0.2.11
+  meta: ^1.3.0
+  http: ^0.13.2
+  uuid: ^3.0.4
+  dio: ^4.0.0
+  #dio_http_cache: ^0.2.11
+  dio_http_cache:
+    git:
+      url: https://github.com/hurshi/dio-http-cache.git
 
 dev_dependencies:
-  test: ^1.0.0
+  test: ^1.17.2
