--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .dart_tool/
 
 .packages
+.metadata
 .pub/
 .vscode/
 .idea/
@@ -10,3 +11,4 @@ build/
 ios/.generated/
 ios/Flutter/Generated.xcconfig
 ios/Runner/GeneratedPluginRegistrant.*
+.env*
